Fix fullscreen on mobile

--- a/plugin/YouPHPFlix2/view/css/style.css
+++ b/plugin/YouPHPFlix2/view/css/style.css
@@ -216,7 +216,8 @@ iframe{
     height: 0;
 
     min-width: 100%;
-    min-height: 100%;    
+    min-height: 100%;  
+    min-height: calc(var(--vh, 1vh) * 100);  
 }
 
 /* carousel height */
